ezapp mini update

--- a/views/sample.html
+++ b/views/sample.html
@@ -3,7 +3,9 @@
 {% block title %}
   Sample Page
 {% endblock %}
+
+{% block content %}
   <h2>
     message = {{ data['message'] }}
   </h2>
-{% block navbar %}
+{% endblock %}
